--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,8 @@
-def ARTIFACT_VERSION = "1.0.0"
+/**
+ * 1.0.0 : release
+ * 1.0.1 : impl Closeable
+ */
+def ARTIFACT_VERSION = "1.0.1"
 def ARTIFACT_NAME = file(".").absoluteFile.name
 
 buildscript {
