--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 /**
  * 1.0.0 : release
  * 1.0.1 : impl Closeable
+ * 1.0.2 : getTaskController
  */
-def ARTIFACT_VERSION = "1.0.1"
+def ARTIFACT_VERSION = "1.0.2"
 def ARTIFACT_NAME = file(".").absoluteFile.name
 
 buildscript {
