--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,9 @@
  * 1.0.0 : release
  * 1.0.1 : impl Closeable
  * 1.0.2 : getTaskController
+ * 1.0.x : 自動デプロイに移行
  */
-def ARTIFACT_VERSION = "1.0.2"
+def ARTIFACT_VERSION = "1.0"
 def ARTIFACT_NAME = file(".").absoluteFile.name
 def ARTIFACT_INSTALL_TARGET = getArtifactInstallTarget()
 
@@ -104,7 +105,7 @@ uploadArchives {
     repositories {
         mavenDeployer {
             repository(url: uri(ARTIFACT_INSTALL_TARGET))
-            pom.version = ARTIFACT_VERSION
+            pom.version = ARTIFACT_VERSION + getArtifactVersionSuffix()
             pom.groupId = "com.eaglesakura"
             pom.artifactId = ARTIFACT_NAME
         }
@@ -134,10 +135,25 @@ task uploadJavadoc << {
 }
 
 /**
+ * バージョンを取得する
+ * CircleCIの場合、バージョン末尾にビルド番号を付与する
+ */
+def getArtifactVersionSuffix() {
+    if (System.env.CIRCLE_BUILD_NUM != null) {
+        // CircleCIのバージョンが指定されているので、そちらを利用する
+        return ".${System.env.CIRCLE_BUILD_NUM}"
+    } else {
+        return ".local"
+    }
+}
+
+/**
  * Mavenの格納先を確定する
  */
-File getArtifactInstallTarget() {
-    if (System.env.CIRCLE_ARTIFACTS != null) {
+def getArtifactInstallTarget() {
+    if (file("maven").directory) {
+        return file("maven");
+    } else if (System.env.CIRCLE_ARTIFACTS != null) {
         return file(System.env.CIRCLE_ARTIFACTS);
     } else if (System.env.MAVEN_LOCAL_REPO != null) {
         return file(System.env.MAVEN_LOCAL_REPO);
@@ -145,4 +161,3 @@ File getArtifactInstallTarget() {
         return file("ci-release");
     }
 }
-
