--- a/build.gradle
+++ b/build.gradle
@@ -50,11 +50,15 @@ dependencies {
         compile project(':eglibrary:simple-utils')
         compile project(':eglibrary:simple-serialize')
         compile project(':eglibrary:android-thread')
+
+        testCompile project(":eglibrary:android-unittest-support")
     } else {
         compile 'com.eaglesakura:simple-logger:1.+'
         compile 'com.eaglesakura:simple-utils:1.+'
         compile 'com.eaglesakura:simple-serialize:1.+'
         compile 'com.eaglesakura:android-thread:1.+'
+
+        testCompile "com.eaglesakura:android-unittest-support:1.+"
     }
 }
 
