--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,9 @@
  * 1.0.1 : impl Closeable
  * 1.0.2 : getTaskController
  * 1.0.x : 自動デプロイに移行
+ * 2.0.x : 実装を切り離せるように修正
  */
-def ARTIFACT_VERSION = "1.0"
+def ARTIFACT_VERSION = "2.0"
 def ARTIFACT_NAME = file(".").absoluteFile.name
 def ARTIFACT_INSTALL_TARGET = getArtifactInstallTarget()
 
@@ -13,7 +14,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.+'
+        classpath 'com.android.tools.build:gradle:2.2.+'
     }
 }
 
@@ -25,8 +26,8 @@ repositories {
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.1"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
@@ -35,7 +36,7 @@ android {
 
     defaultConfig {
         minSdkVersion 10
-        targetSdkVersion 23
+        targetSdkVersion 24
     }
 }
 
@@ -50,12 +51,14 @@ dependencies {
         compile project(':eglibrary:simple-serialize')
         compile project(':eglibrary:android-thread')
 
+        testCompile project(":eglibrary:json-wrapper")
         testCompile project(":eglibrary:android-unittest-support")
     } else {
         compile 'com.eaglesakura:simple-utils:1.+'
         compile 'com.eaglesakura:simple-serialize:1.+'
         compile 'com.eaglesakura:android-thread:1.+'
 
+        testCompile "com.eaglesakura:json-wrapper:1.+"
         testCompile "com.eaglesakura:android-unittest-support:1.+"
     }
 }
