--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,10 @@ android {
         minSdkVersion 10
         targetSdkVersion 24
     }
+
+    lintOptions {
+        disable "NewApi"
+    }
 }
 
 // Local or maven
