Proguard設定を追加

--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ android {
     defaultConfig {
         minSdkVersion 10
         targetSdkVersion 25
+        consumerProguardFiles 'proguard-rules.pro'
     }
 
     lintOptions {
