--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,15 @@
  * 1.0.2 : getTaskController
  * 1.0.x : 自動デプロイに移行
  * 2.0.x : 実装を切り離せるように修正
+ * 2.1.x : bintrayへ移行
  */
-def ARTIFACT_VERSION = "2.0"
-def ARTIFACT_NAME = file(".").absoluteFile.name
-def ARTIFACT_INSTALL_TARGET = getArtifactInstallTarget()
+def ARTIFACT_VERSION = "2.1"
+def REPOSITORY_NAME = "maven"
+def BINTRAY_LICENSES = ["MIT"]
+def BINTRAY_LABELS = ["android"]
+def BINTRAY_API_KEY = System.env.BINTRAY_API_KEY
+def BINTRAY_GPG_PASS = System.env.BINTRAY_GPG_PASS
+
 
 buildscript {
     repositories {
@@ -19,11 +24,13 @@ buildscript {
 }
 
 repositories {
-    maven { url "http://eaglesakura.github.io/maven/" }
     mavenCentral()
+    maven { url "https://dl.bintray.com/eaglesakura/maven/" }
 }
 
 apply plugin: 'com.android.library'
+group = "com.eaglesakura"
+version = ARTIFACT_VERSION + getArtifactVersionSuffix()
 
 android {
     compileSdkVersion 25
@@ -54,21 +61,19 @@ dependencies {
     if (EGLIBRARY_COMPILE_LOCAL) {
         compile project(':eglibrary:simple-utils')
         compile project(':eglibrary:simple-serialize')
-        compile project(':eglibrary:android-thread')
+        compile project(':eglibrary:android-simple-utils')
 
         testCompile project(":eglibrary:json-wrapper")
         testCompile project(":eglibrary:android-unittest-support")
     } else {
-        compile "com.eaglesakura:simple-utils:1.1.556"
+        compile "com.eaglesakura:simple-utils:1.2.562"
         compile "com.eaglesakura:simple-serialize:1.1.448"
-        compile "com.eaglesakura:android-thread:1.1.459"
+        compile "com.eaglesakura:android-simple-utils:2.0.548"
 
-        testCompile "com.eaglesakura:json-wrapper:1.0.419"
-        testCompile "com.eaglesakura:android-unittest-support:1.3.205"
+        testCompile "com.eaglesakura:json-wrapper:1.1.423"
+        testCompile "com.eaglesakura:android-unittest-support:1.4.206"
     }
 }
-
-apply plugin: 'maven'
 
 task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
@@ -114,26 +119,6 @@ android.libraryVariants.all { variant ->
     }
 }
 
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: uri(ARTIFACT_INSTALL_TARGET))
-            pom.version = ARTIFACT_VERSION + getArtifactVersionSuffix()
-            pom.groupId = "com.eaglesakura"
-            pom.artifactId = ARTIFACT_NAME
-        }
-    }
-}
-
-task uploadJavadoc << {
-    def src = file("build/docs/javadoc/");
-    def dst = new File("${ARTIFACT_INSTALL_TARGET.absolutePath}/doc/${ARTIFACT_NAME}/");
-    dst.deleteDir();
-    dst.mkdirs();
-
-    ["/usr/bin/rsync", "-a", src.absolutePath, dst.absolutePath].execute().text;
-}
-
 /**
  * バージョンを取得する
  * CircleCIの場合、バージョン末尾にビルド番号を付与する
@@ -143,21 +128,31 @@ def getArtifactVersionSuffix() {
         // CircleCIのバージョンが指定されているので、そちらを利用する
         return ".${System.env.CIRCLE_BUILD_NUM}"
     } else {
-        return ".local"
+        return ".snapshot"
     }
 }
 
-/**
- * Mavenの格納先を確定する
- */
-def getArtifactInstallTarget() {
-    if (file("maven").directory) {
-        return file("maven");
-    } else if (System.env.CIRCLE_ARTIFACTS != null) {
-        return file(System.env.CIRCLE_ARTIFACTS);
-    } else if (System.env.MAVEN_LOCAL_REPO != null) {
-        return file(System.env.MAVEN_LOCAL_REPO);
-    } else {
-        return file("ci-release");
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.github.dcendents.android-maven'
+
+bintray {
+    user = 'eaglesakura'
+    key = BINTRAY_API_KEY
+    pkg {
+        repo = REPOSITORY_NAME
+        name = file(".").absoluteFile.name
+        licenses = BINTRAY_LICENSES
+        labels = BINTRAY_LABELS
+        issueTrackerUrl = "https://github.com/eaglesakura/${file(".").absoluteFile.name}/issues"
+        vcsUrl = "https://github.com/eaglesakura/${file(".").absoluteFile.name}"
+        version {
+            name = project.version
+            released = new Date()
+            gpg {
+                sign = true
+                passphrase = BINTRAY_GPG_PASS
+            }
+        }
     }
+    configurations = ['archives']
 }
