--- a/build.gradle
+++ b/build.gradle
@@ -61,19 +61,15 @@ if (!hasProperty("EGLIBRARY_COMPILE_LOCAL")) {
 
 dependencies {
     if (EGLIBRARY_COMPILE_LOCAL) {
-        compile project(':eglibrary:simple-utils')
-        compile project(':eglibrary:simple-serialize')
-        compile project(':eglibrary:android-simple-utils')
+        compile project(':eglibrary:android-commons')
 
         testCompile project(":eglibrary:json-wrapper")
         testCompile project(":eglibrary:android-unittest-support")
     } else {
-        compile "com.eaglesakura:simple-utils:1.2.562"
-        compile "com.eaglesakura:simple-serialize:1.2.453"
-        compile "com.eaglesakura:android-simple-utils:2.0.548"
+        compile "com.eaglesakura:android-commons:2.1.3"
 
         testCompile "com.eaglesakura:json-wrapper:1.1.423"
-        testCompile "com.eaglesakura:android-unittest-support:1.4.206"
+        testCompile "com.eaglesakura:android-unittest-support:1.4.207"
     }
 }
 
