--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ dependencies {
         testCompile project(":eglibrary:json-wrapper")
         testCompile project(":eglibrary:android-unittest-support")
     } else {
+        compile "com.eaglesakura:java-commons:2.0.3"
         compile "com.eaglesakura:android-commons:2.1.3"
 
         testCompile "com.eaglesakura:json-wrapper:1.1.423"
