KVSに関係のないクラスをFrameworkに移動

--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,7 @@
 /**
- * 1.0.0 : release
- * 1.0.1 : impl Closeable
- * 1.0.2 : getTaskController
- * 1.0.x : 自動デプロイに移行
- * 2.0.x : 実装を切り離せるように修正
- * 2.1.x : bintrayへ移行
+ * 2.2.x : 最低限の依存で動作が行えるように整理
  */
-def ARTIFACT_VERSION = "2.1"
+def ARTIFACT_VERSION = "2.2"
 def REPOSITORY_NAME = "maven"
 def BINTRAY_LICENSES = ["MIT"]
 def BINTRAY_LABELS = ["android"]
@@ -61,14 +56,11 @@ if (!hasProperty("EGLIBRARY_COMPILE_LOCAL")) {
 
 dependencies {
     if (EGLIBRARY_COMPILE_LOCAL) {
-        compile project(':eglibrary:android-commons')
-
+        compile project(':eglibrary:java-commons')
         testCompile project(":eglibrary:json-wrapper")
         testCompile project(":eglibrary:android-unittest-support")
     } else {
         compile "com.eaglesakura:java-commons:2.0.3"
-        compile "com.eaglesakura:android-commons:2.1.3"
-
         testCompile "com.eaglesakura:json-wrapper:1.1.423"
         testCompile "com.eaglesakura:android-unittest-support:1.4.207"
     }
