--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,8 @@
 /**
  * 2.2.x : 最低限の依存で動作が行えるように整理
+ * 2.3.x : AS3.0対応
  */
-def ARTIFACT_VERSION = "2.2"
+def ARTIFACT_VERSION = "2.3"
 def REPOSITORY_NAME = "maven"
 def BINTRAY_LICENSES = ["MIT"]
 def BINTRAY_LABELS = ["android"]
@@ -12,16 +13,18 @@ def BINTRAY_GPG_PASS = System.env.BINTRAY_GPG_PASS
 buildscript {
     repositories {
         jcenter()
+        maven { url "https://maven.google.com" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.0.0-alpha1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
 }
 
 repositories {
-    mavenCentral()
+    jcenter()
+    maven { url "https://maven.google.com" }
     maven { url "https://dl.bintray.com/eaglesakura/maven/" }
 }
 
@@ -34,8 +37,8 @@ android {
     buildToolsVersion "25.0.2"
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     defaultConfig {
@@ -56,13 +59,13 @@ if (!hasProperty("EGLIBRARY_COMPILE_LOCAL")) {
 
 dependencies {
     if (EGLIBRARY_COMPILE_LOCAL) {
-        compile project(':eglibrary:java-commons')
-        testCompile project(":eglibrary:json-wrapper")
-        testCompile project(":eglibrary:android-unittest-support")
+        implementation project(':eglibrary:java-commons')
+        testImplementation project(":eglibrary:json-wrapper")
+        testImplementation project(":eglibrary:android-unittest-support")
     } else {
-        compile "com.eaglesakura:java-commons:2.0.3"
-        testCompile "com.eaglesakura:json-wrapper:1.1.423"
-        testCompile "com.eaglesakura:android-unittest-support:1.4.207"
+        implementation "com.eaglesakura:java-commons:2.0.3"
+        testImplementation "com.eaglesakura:json-wrapper:1.1.423"
+        testImplementation "com.eaglesakura:android-unittest-support:1.4.207"
     }
 }
 
