--- a/build.gradle
+++ b/build.gradle
@@ -59,13 +59,13 @@ if (!hasProperty("EGLIBRARY_COMPILE_LOCAL")) {
 
 dependencies {
     if (EGLIBRARY_COMPILE_LOCAL) {
-        implementation project(':eglibrary:java-commons')
-        testImplementation project(":eglibrary:json-wrapper")
-        testImplementation project(":eglibrary:android-unittest-support")
+        compile project(':eglibrary:java-commons')
+        testCompile project(":eglibrary:json-wrapper")
+        testCompile project(":eglibrary:android-unittest-support")
     } else {
-        implementation "com.eaglesakura:java-commons:2.0.3"
-        testImplementation "com.eaglesakura:json-wrapper:1.1.423"
-        testImplementation "com.eaglesakura:android-unittest-support:1.4.207"
+        compile "com.eaglesakura:java-commons:2.0.3"
+        testCompile "com.eaglesakura:json-wrapper:1.1.423"
+        testCompile "com.eaglesakura:android-unittest-support:1.4.207"
     }
 }
 
@@ -84,7 +84,8 @@ android.libraryVariants.all { variant ->
         description "Generates Android Javadoc for $variant.name."
         source = variant.javaCompile.source
         ext.androidJar = "${android.sdkDirectory}/platforms/${android.compileSdkVersion}/android.jar"
-        classpath = files(variant.javaCompile.classpath.files) + files(ext.androidJar) + files("build/intermediates/classes/${variant.name}/")
+//        classpath = files(variant.javaCompile.classpath.files) + files(ext.androidJar) + files("build/intermediates/classes/${variant.name}/")
+        classpath = files(ext.androidJar) + files("build/intermediates/classes/${variant.name}/")
         options.links("http://docs.oracle.com/javase/7/docs/api/");
         options.links("http://d.android.com/reference/");
         exclude '**/BuildConfig.java'
