--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,10 @@
 /**
  * 2.2.x : 最低限の依存で動作が行えるように整理
  * 2.3.x : AS3.0対応
+ * 2.4.x : バージョン規則を変更
  */
-def ARTIFACT_VERSION = "2.3"
+def ARTIFACT_VERSION = System.env.CIRCLE_TAG == null ?
+        "2.4" : System.env.CIRCLE_TAG.substring(System.env.CIRCLE_TAG.indexOf('v') + 1)
 def REPOSITORY_NAME = "maven"
 def BINTRAY_LICENSES = ["MIT"]
 def BINTRAY_LABELS = ["android"]
@@ -63,8 +65,8 @@ dependencies {
         testCompile project(":eglibrary:json-wrapper")
         testCompile project(":eglibrary:android-unittest-support")
     } else {
-        compile "com.eaglesakura:java-commons:2.0.3"
-        testCompile "com.eaglesakura:json-wrapper:1.1.423"
+        compile "com.eaglesakura:java-commons:2.1.0"
+        testCompile "com.eaglesakura:json-wrapper:1.2.0"
         testCompile "com.eaglesakura:android-unittest-support:1.5.211"
     }
 }
@@ -119,9 +121,16 @@ android.libraryVariants.all { variant ->
  * CircleCIの場合、バージョン末尾にビルド番号を付与する
  */
 def getArtifactVersionSuffix() {
+    String CIRCLE_TAG = System.env.CIRCLE_TAG
+
+    if (CIRCLE_TAG != null) {
+        // TAGがある場合それを直接利用する
+        return ""
+    }
+
     if (System.env.CIRCLE_BUILD_NUM != null) {
         // CircleCIのバージョンが指定されているので、そちらを利用する
-        return ".${System.env.CIRCLE_BUILD_NUM}"
+        return ".build-${System.env.CIRCLE_BUILD_NUM}"
     } else {
         return ".snapshot"
     }
