--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
         maven { url "https://maven.google.com" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-alpha4'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
     }
@@ -35,8 +35,8 @@ group = "com.eaglesakura"
 version = ARTIFACT_VERSION + getArtifactVersionSuffix()
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "26.0.2"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -44,8 +44,8 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 10
-        targetSdkVersion 25
+        minSdkVersion 15
+        targetSdkVersion 26
         consumerProguardFiles 'proguard-rules.pro'
     }
 
@@ -55,9 +55,9 @@ android {
 }
 
 dependencies {
-    compile "com.eaglesakura:java-commons:2.2.0"
+    compile "com.eaglesakura:java-commons:2.2.1"
     testCompile "com.eaglesakura:json-wrapper:1.2.0"
-    testCompile "com.eaglesakura:android-unittest-support:1.5.211"
+    testCompile "com.eaglesakura:android-unittest-support:1.6.1"
 }
 
 task sourcesJar(type: Jar) {
